# Passgen

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/app/: cli.rs  config.rs  mod.rs  password.rs  state.rs  ui.rs  utils.rs
